# hspec-with-tempfile

./: CHANGELOG.md  README.md  cabal.project  hspec-with-tempfile.cabal
.github/workflows/: gh-pages.yml  haskell-ci.yml
src/Test/Hspec/: WithTempFile.hs
src/Test/Hspec/WithTempFile/: Golden.hs
test/: ExampleSpec.hs
